fix devise features

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,7 +5,23 @@
 
     <body> 
 
-            <ul>
+
+        <main role="main">
+
+        <!-- Main jumbotron for a primary marketing message or call to action -->
+        <div class="jumbotron">
+            <div class="container">
+            <h1 class="display-3">Welcome to Eventbrite ! </h1>
+                <h3>Voici tous les événements : </h3>
+            <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+            </div>
+        </div>  <!-- /jumbotron -->
+
+
+       
+            <div class="container">  <!-- A supprimer -->
+
+                        <ul>
                 <% if user_signed_in? %>
                     <li>
                     <%= link_to "Sign out", root_path, method: :delete %>
@@ -27,21 +43,11 @@
                     <%= link_to "Sign up", new_user_registration_path %>
                     </li>
                 <% end %>
-            </ul>
+                </ul>
+            </div>  <!-- /A supprimer -->
 
 
-        <main role="main">
 
-        <!-- Main jumbotron for a primary marketing message or call to action -->
-        <div class="jumbotron">
-            <div class="container">
-            <h1 class="display-3">Welcome to Eventbrite ! </h1>
-                <h3>Voici tous les événements : </h3>
-            <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
-            </div>
-        </div>  <!-- /jumbotron -->
-
-            
             <div class="container">  <!-- container -->
         
                 <% @events.each do |event| %>
