--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
           <% end %>
           <% if user_signed_in? %>
           <li class="nav-item">
-            <a class="nav-link" <%= link_to "My profile", root_path %>  </a>
+            <a class="nav-link" <%= link_to "My profile", user_path(current_user) %>  </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" <%= link_to "LogOut", destroy_user_session_path, method: :delete %> </a>
@@ -65,9 +65,13 @@
     <main>
     </main>
 
-    <footer class="container bg-dark">
-      <p>&copy; THP 2019</p>
+
+    <%= yield %>
+
+    <footer class="footer fixed-bottom bg-dark">
+    <p class= "text-center text-white">&copy; THP 2019</p>
     </footer>
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
@@ -77,7 +81,6 @@
     <script src="../../assets/js/vendor/popper.min.js"></script>
     <script src="../../dist/js/bootstrap.min.js"></script>
 
-    <%= yield %>
   </body>
 
 </html>
