--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -4,13 +4,13 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Salut <%= @user.first_name %> et bienvenue chez nous !</h1>
+    <h1>Salut <%= @user.first_name %> et bienvenue chez nous !</h1><i class="fas fa-air-freshener"></i>
     <p>
-      Tu t'es inscrit sur monsite.fr en utilisant l'e-mail suivant : <%= @user.email %>.
+      Tu t'es inscrit sur besteventsintown en utilisant l'e-mail suivant : <%= @user.email %>.
     </p>
     <p>
-      Pour accéder à ton espace client, connecte-toi via : <%= "www.google.com" %>.
+      Pour accéder à ton espace client, connecte-toi via : <%= "https://besteventsintown.herokuapp.com"%>.
     </p>
-    <p> À très vite sur monsite.fr !
+    <p> À très vite !
   </body>
 </html>
