--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -41,12 +41,15 @@
 </div>
           
           <% if @event.admin.id == current_user.id %>
+            <center> <div>
+            <a class="btn btn-primary" <%= link_to "Go to Admin Event Page", {:controller => "attendances", :action => "index", :event_id => @event.id} %> </a>
+            </div> </center>
 
           <% else %>
-<center> <div>
-<a class="btn btn-primary" <%= link_to "Subscribe to Event", {:controller => "charges", :action => "new", :event_id => @event.id} %> </a>
-</div> </center>
- <% end %>
+            <center> <div>
+            <a class="btn btn-primary" <%= link_to "Subscribe to Event", {:controller => "charges", :action => "new", :event_id => @event.id} %> </a>
+            </div> </center>
+          <% end %>
 
 </body>
 </html>
