--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -25,7 +25,8 @@
                     <div class="card" style = "margin-bottom:25px" >
                         <div class="card-header" >
                             Location : <%= event.location %><br>
-                            Duration : <%= event.duration %> min
+                            Duration : <%= event.duration %> min <br>
+                            Admin : <%= event.admin.email %>
                         </div>
                         <div class="card-body">
                             <h5 class="card-title"><%= event.title %></h5>
