--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -78,17 +78,17 @@
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="#">
-                  <i class="fab fa-twitter"></i>
+                  <%# <i class="fab fa-twitter"></i> %>
                 </a>
               </li>
               <li class="list-inline-item">
                 <a href="#">
-                  <i class="fab fa-facebook-f"></i>
+                  <%# <i class="fab fa-facebook-f"></i> %>
                 </a>
               </li>
               <li class="list-inline-item">
                 <a href="#">
-                  <i class="fab fa-linkedin-in"></i>
+                  <%# <i class="fab fa-linkedin-in"></i> %>
                 </a>
               </li>
             </ul>
@@ -102,17 +102,17 @@
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="#">
-                  <i class="fab fa-twitter"></i>
+                  <%# <i class="fab fa-twitter"></i> %>
                 </a>
               </li>
               <li class="list-inline-item">
                 <a href="#">
-                  <i class="fab fa-facebook-f"></i>
+                  <%# <i class="fab fa-facebook-f"></i> %>
                 </a>
               </li>
               <li class="list-inline-item">
                 <a href="#">
-                  <i class="fab fa-linkedin-in"></i>
+                  <%# <i class="fab fa-linkedin-in"></i> %>
                 </a>
               </li>
             </ul>
@@ -124,19 +124,19 @@
             <h4>Bérénice BOURGON</h4>
             <p class="text-muted">Lead Developer</p>
             <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
+              <%# <li class="list-inline-item"> %>
                 <a href="#">
-                  <i class="fab fa-twitter"></i>
+                  <%# <i class="fab fa-twitter"></i> %>
                 </a>
               </li>
               <li class="list-inline-item">
                 <a href="#">
-                  <i class="fab fa-facebook-f"></i>
+                  <%# <i class="fab fa-facebook-f"></i> %>
                 </a>
               </li>
               <li class="list-inline-item">
                 <a href="#">
-                  <i class="fab fa-linkedin-in"></i>
+                  <%# <i class="fab fa-linkedin-in"></i> %>
                 </a>
               </li>
             </ul>
@@ -162,17 +162,17 @@
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
               <a href="#">
-                <i class="fab fa-twitter"></i>
+                <%# <i class="fab fa-twitter"></i> %>
               </a>
             </li>
             <li class="list-inline-item">
               <a href="#">
-                <i class="fab fa-facebook-f"></i>
+                <%# <i class="fab fa-facebook-f"></i> %>
               </a>
             </li>
             <li class="list-inline-item">
               <a href="#">
-                <i class="fab fa-linkedin-in"></i>
+                <%# <i class="fab fa-linkedin-in"></i> %>
               </a>
             </li>
           </ul>
